--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ mypy = "^1.14.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest-asyncio = "^0.25.1"
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
