--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "dvsportal"
-version = "1.3.1"
+version = "1.3.2"
 description = "Asynchronous Python client for the DVSPortal API as used by Dutch muncipalities for guest parking."
 authors = ["ChessSpider <chessspider@gmail.com>"]
 readme = "README.md"
@@ -38,7 +38,7 @@ ignore = ["E501"]  # Ignore line-length violations
 
 [tool.pytest.ini_options]
 python_files = ["test_*.py", "*_test.py"]
-addopts = "--tb=short"
+addopts = "--tb=short --cov=dvsportal --cov-report=term-missing"
 markers = [
     "asyncio: mark a test as an asyncio test"
 ]
